--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "build": "npm run lint && babel src -d dist",
+    "build": "babel src -d dist",
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "jest -i --colors --verbose --detectOpenHandles",
